--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,13 @@
 :root {
+  background-color: #242424;
+  color: rgba(255, 255, 255, 0.87);
+}
+
+h1 {
+  font-family: "Delius";
+}
+
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -25,7 +34,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  /* place-items: center; */
+  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -65,4 +74,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
